# brick-tracker

./: .env.example  .gitignore  auth.py  config.py  database.py  main.py  manifest.json  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  tailwind.config.js
app/: config.py  database.py  main.py
app/routers/: custom_tasks.py  dashboard.py  studies.py  tracker.py  user.py
app/services/: cache.py  custom_tasks.py  filter.py  parser.py  scanner.py
app/static/js/: app.js
app/templates/: index.html
routers/: custom_tasks.py  dashboard.py  studies.py  tracker.py  user.py
services/: cache.py  custom_tasks.py  filter.py  parser.py  scanner.py
static/css/: style.css  tailwind.css
static/js/: app.js
templates/: base.html  index.html
templates/components/: summary_cards.html  task_table.html
